# enocean-mqtt-ha

./: .dockerignore  .editorconfig  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .yamllint  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  STYLEGUIDE.md  THIRD-PARTY-LICENSES.md  pyproject.toml  repository.yaml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  device_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
addon/: CHANGELOG.md  DOCS.md  Dockerfile  apparmor.txt  build.yaml  config.yaml  devices.yaml.sample  run.sh
addon/translations/: de.yaml  en.yaml  es.yaml  fr.yaml  it.yaml  nl.yaml
catalog/: eltako_devices.yaml
docs/: adding-devices.md  architecture.md  coverage.md  development.md  esp3-compliance.md  spec-compliance.md  testing.md
docs/img/: render.sh
pi/: 99-enocean.rules  install.sh  ser2net.yaml
src/enocean2mqtt/: __main__.py  cli.py  config.py  devices.py  transport.py
src/enocean2mqtt/adapters/: __init__.py
src/enocean2mqtt/adapters/mqtt/: aiomqtt_bus.py
src/enocean2mqtt/adapters/store/: sqlite_store.py
src/enocean2mqtt/adapters/transceiver/: factory.py  ser2net_link.py  serial_link.py  stream.py
src/enocean2mqtt/application/: __init__.py  bootstrap.py  daemon.py  decoder.py  encoder.py  inbound.py  publisher.py
src/enocean2mqtt/domain/: __init__.py  config.py  sensor.py
src/enocean2mqtt/homeassistant/: cover.py  ha_bridge.py  sensor_expander.py
src/enocean2mqtt/homeassistant/discovery/: mapping_lookup.py  publisher.py
src/enocean2mqtt/homeassistant/mapping/: __init__.py  _builders.py  _catalog.py
src/enocean2mqtt/homeassistant/mapping/eep/: __init__.py  a5_hvac.py  a5_room_panels.py  a5_sensors.py  a5_weather.py  d2_devices.py  d2_switches.py  eltako.py  f6.py  misc.py
src/enocean2mqtt/ports/: __init__.py  device_store.py  message_bus.py  transceiver.py
src/enocean2mqtt/protocol/: constants.py  crc8.py  eep_codec.py  packet.py  security.py  utils.py
src/enocean2mqtt/protocol/profiles/: __init__.py  _build.py  _model.py  engine.py
src/enocean2mqtt/protocol/profiles/eep/: __init__.py  a5_hvac.py  a5_room_panels.py  a5_sensors.py  a5_weather.py  d2_devices.py  d2_switches.py  f6.py
tests/: test_catalog.py  test_config.py
tests/adapters/: test_sqlite_store.py  test_transceiver_connect.py
tests/addon/: run_sh.bats
tests/daemon/: test_async_run.py  test_async_transport.py  test_auto_devices.py  test_bootstrap.py  test_cli.py  test_devices_yaml.py  test_handle_data_packet.py  test_inbound.py  test_injection.py  test_mqtt_async.py  test_process_radio.py  test_publish_mqtt.py  test_send_encode.py
tests/domain/: test_sensor.py
tests/enocean/: test_decode_backends.py
tests/fixtures/certification/: eep_certification.json
tests/fixtures/telegrams/: received_a5_051E70DE_00_10.json  received_a5_058D07E7_00_10.json  received_a5_058D07F4_00_10.json  received_a5_058D9D07_00_10.json  received_a5_058D9D5D_00_10.json  received_a5_058E42AA_00_10.json  received_a5_058E4304_00_10.json  received_a5_058E4F86_00_10.json  received_a5_058E4FA7_00_10.json  received_a5_058E56C5_00_10.json  received_a5_059ED79A_14_10.json  received_a5_059ED79A_16_10.json  received_a5_059ED79A_19_10.json  received_a5_059ED79A_1c_10.json  received_a5_059ED79A_1e_10.json  received_a5_059ED79A_20_10.json  received_a5_059ED79A_22_10.json  received_a5_059ED79A_23_10.json  received_a5_059ED79A_25_10.json  received_a5_059ED79A_27_10.json  received_a5_059ED79A_28_10.json  received_a5_059ED79A_2c_10.json  received_a5_059ED79A_2d_10.json  received_a5_059ED79A_ff_10.json  received_a5_FF94CE99_00_10.json  received_a5_FF94CEA3_00_10.json  received_a5_FF94CEA4_00_10.json  received_a5_FF94CEA5_00_10.json  received_a5_FF94CEA6_00_10.json  received_a5_FF94CEA7_00_10.json  received_a5_FF94CEA8_00_10.json  received_a5_FF94CEA9_00_10.json  received_a5_FF94CEAA_00_10.json  received_a5_FF94CEAB_00_10.json  received_a5_FF94CEAC_00_10.json  received_a5_FF94CEAD_00_10.json  received_a5_FF94CEAE_00_10.json  received_a5_FFAE7C81_00_10.json  received_a5_FFAE7C90_01_10.json  received_a5_FFAE7C91_01_10.json  (+74 more)
tests/ha/: test_cover_command.py  test_cover_position.py  test_cover_position_publish.py  test_device_manager.py  test_discovery_availability.py  test_discovery_build.py  test_discovery_snapshot.py  test_f6_virtual_buttons.py  test_learn_teachin.py  test_mapping.py  test_mapping_builders.py  test_mapping_catalog.py  test_mapping_profile_fields.py  test_sensor_expander.py  test_setpoint_scaling.py  test_startup.py
tests/integration/: Dockerfile  conftest.py  emulator.py  test_end_to_end.py  test_home_assistant.py  test_resilience.py
tests/ports/: test_conformance.py  test_device_store_contract.py
tests/protocol/: test_certification.py  test_codec_properties.py  test_d2_01_11.py  test_d2_50.py  test_eep_codec.py  test_eep_fidelity.py  test_eep_parse.py  test_eltako_f6_feedback.py  test_engine_encode.py  test_engine_parity.py  test_external_goldens.py  test_malformed.py  test_profile_builders.py  test_profiles.py  test_security.py
tests/protocol/conformance/: _timing.py  test_lib_internals.py  test_packet.py  test_packet_creation.py  test_teachin.py  test_utils.py
tools/: package-addon.sh  test-build.sh
wiki/: Configuration-(devices.yaml).md  Eltako-Setup.md  Examples.md  FAQ.md  Getting-Started.md  Home.md  README.md  Raspberry-Pi-Transceiver.md  Supported-Devices.md  Teach-In.md  Troubleshooting.md  _Footer.md  _Sidebar.md
